--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: teste
+name: meu_projeto
 channels:
   - anaconda
   - conda-forge
@@ -176,4 +176,4 @@ dependencies:
       - tiktoken==0.5.1
       - typing-inspect==0.9.0
       - uvicorn==0.24.0.post1
-prefix: /Users/gabrielgavapinheiro/miniconda3/envs/teste
+prefix: /Users/gabrielgavapinheiro/miniconda3/envs/meu_projeto
