--- a/requirements.txt
+++ b/requirements.txt
@@ -1,147 +1,12 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-anyio==3.6.2
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==22.2.0
-autopep8==2.0.2
-backcall==0.2.0
-beautifulsoup4==4.11.2
-bleach==6.0.0
-CacheControl==0.13.1
-cachetools==5.3.1
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-comm==0.1.2
-contourpy==1.0.7
-cryptography==41.0.4
-cycler==0.11.0
-debugpy==1.6.6
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.6
-et-xmlfile==1.1.0
-executing==1.2.0
-fastjsonschema==2.16.3
-filelock==3.10.7
-firebase==4.0.1
-firebase-admin==6.2.0
-Flask==2.2.3
-fonttools==4.39.3
-fqdn==1.5.1
-frozenlist==1.3.3
-google-api-core==2.12.0
-google-api-python-client==2.103.0
-google-auth==2.23.3
-google-auth-httplib2==0.1.1
-google-cloud-core==2.3.3
-google-cloud-firestore==2.12.0
-google-cloud-storage==2.12.0
-google-crc32c==1.5.0
-google-resumable-media==2.6.0
-googleapis-common-protos==1.61.0
-grpcio==1.59.0
-grpcio-status==1.59.0
-httplib2==0.22.0
-idna==3.4
-ipykernel==6.21.2
-ipython==8.11.0
-ipython-genutils==0.2.0
-isoduration==20.11.0
-itsdangerous==2.1.2
-jedi==0.18.2
-Jinja2==3.1.2
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter-events==0.6.3
-jupyter_client==8.0.3
-jupyter_core==5.2.0
-jupyter_server==2.3.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-kiwisolver==1.4.4
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mistune==2.0.5
-msgpack==1.0.7
-multidict==6.0.4
-nbclassic==0.5.2
-nbclient==0.7.2
-nbconvert==7.2.9
-nbformat==5.7.3
-nest-asyncio==1.5.6
-notebook==6.5.2
-notebook_shim==0.2.2
-numpy==1.24.2
-openai==0.27.3
-openpyxl==3.1.2
-packaging==23.0
-pandas==2.0.0
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.0.0
-plotly==5.14.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-proto-plus==1.22.3
-protobuf==4.24.4
-psutil==5.9.4
-psycopg2==2.9.6
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pybind11==2.10.3
-pycodestyle==2.10.0
-pycparser==2.21
-Pygments==2.14.0
-PyJWT==2.8.0
-pyparsing==3.0.9
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2023.3
-PyYAML==6.0
-pyzmq==25.0.0
-redis==4.5.4
-regex==2023.3.23
-requests==2.28.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rsa==4.9
-SciPy==1.10.1
-Send2Trash==1.8.0
-six==1.16.0
-sklearn==0.0.post1
-sniffio==1.3.0
-soupsieve==2.4
-stack-data==0.6.2
-tenacity==8.2.2
-terminado==0.17.1
-tiktoken==0.3.3
-tinycss2==1.2.1
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.9.0
-tzdata==2023.3
-uri-template==1.2.0
-uritemplate==4.1.1
-urllib3==1.26.15
-virtualenv==20.21.0
-wcwidth==0.2.6
-webcolors==1.12
-webencodings==0.5.1
-websocket-client==1.5.1
-Werkzeug==2.2.3
-wget==3.2
-yarl==1.8.2
+fastapi==0.104.1
+pydantic==2.5.2
+uvicorn==0.24.0
+pytest-shutil==1.7.0
+service==0.6.0
+langchain==0.0.344
+numpy==1.26.2
+pypdf==3.17.1
+qdrant-client==1.6.9
+sentence-transformers==2.2.2
+python-multipart==0.0.6
+tiktoken==0.5.1
